# gh-code-finder

./: .gitignore  CMakeLists.txt  README.md  build.sh
header/: finder.h
src/: main.cpp
